feat: 模型模块新建模型
